Bug 390264 - Clicking autocomplete entry crashes application
Summary: Clicking autocomplete entry crashes application
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.0
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 390128 390530 390565 390704 390773 391122 391739 392002 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-02-11 13:19 UTC by Achilleas Koutsou
Modified: 2018-03-18 16:29 UTC (History)
10 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Achilleas Koutsou 2018-02-11 13:19:06 UTC
This is a bit hard to pin down but it seems that if I type an entry that pops up completion suggestions (e.g., Payee, Tags) and I click on a completion, the application first interprets this as an attempt to stop editing the transaction (it asks if I want to save or discard changes) and then crashes.

If I use the arrowkeys to select the completion it works.

If I click anywhere else in the transaction dialogue, it also works.
Comment 1 Thomas Baumgart 2018-02-15 13:06:19 UTC
Git commit 7f63b5c02775ae7499f86cff46fef6b54bdb3a78 by Thomas Baumgart.
Committed on 15/02/2018 at 13:06.
Pushed by tbaumgart into branch '5.0'.

Determine between main window and completion boxes

An opened completion box of e.g. the payees combo box was not correctly
detected as a widget of the transaction editor and the application tried
to close the editor. The false detection caused the application to crash
in a following step. This patch fixes the detection.
FIXED-IN: 5.0.1

M  +5    -1    kmymoney/views/kgloballedgerview_p.h

https://commits.kde.org/kmymoney/7f63b5c02775ae7499f86cff46fef6b54bdb3a78
Comment 2 Thomas Baumgart 2018-02-16 07:25:46 UTC
*** Bug 390530 has been marked as a duplicate of this bug. ***
Comment 3 Thomas Baumgart 2018-02-16 19:21:31 UTC
*** Bug 390128 has been marked as a duplicate of this bug. ***
Comment 4 Thomas Baumgart 2018-02-16 19:21:52 UTC
*** Bug 390565 has been marked as a duplicate of this bug. ***
Comment 5 Thomas Baumgart 2018-02-19 07:06:08 UTC
*** Bug 390704 has been marked as a duplicate of this bug. ***
Comment 6 Thomas Baumgart 2018-02-20 14:24:50 UTC
*** Bug 390773 has been marked as a duplicate of this bug. ***
Comment 7 Thomas Baumgart 2018-02-23 06:34:46 UTC
*** Bug 390773 has been marked as a duplicate of this bug. ***
Comment 8 Thomas Baumgart 2018-02-26 21:08:16 UTC
*** Bug 391122 has been marked as a duplicate of this bug. ***
Comment 9 Michael Carpino 2018-03-12 03:08:48 UTC
*** Bug 391739 has been marked as a duplicate of this bug. ***
Comment 10 Thomas Baumgart 2018-03-18 16:29:24 UTC
*** Bug 392002 has been marked as a duplicate of this bug. ***