Determine between main window and completion boxes

An opened completion box of e.g. the payees combo box was not correctly
detected as a widget of the transaction editor and the application tried
to close the editor. The false detection caused the application to crash
in a following step. This patch fixes the detection.

BUG: 390264
FIXED-IN: 5.0.1